fixing some div overflow issues on botth mobile and tablet version

--- a/styles.css
+++ b/styles.css
@@ -278,3 +278,92 @@ input:nth-of-type(3){
   font-size: 1.2rem;
   color: rgba(255, 255, 255, 0.9);
 }
+
+/*media query for tablets screen sizes */
+@media screen and (min-width: 481px) and (max-width: 769px) {
+  
+header{
+  flex-direction: row;
+  background: rgb(238, 174, 202);
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+    box-shadow: 0 4px 8px 0 rgba(226, 152, 245, 0.2), 0 6px 20px 0 rgba(178, 212, 255, 0.18);
+  }
+  .heading{
+    font-size: 1.4rem;
+    margin-bottom: 4px;
+    
+  }
+  .heading-name{
+    font-size: 1rem;
+    margin-bottom: 5px;
+    
+  }
+  .my-full-name{
+    margin-left: 30px;
+    text-align: left;
+  }
+
+body{
+
+  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+}
+
+  main{
+  width: 80%;
+}
+
+section {
+  width: 100%;
+  height: fit-content;
+  background: rgba(238, 237, 235, 0.7);
+  margin: 10px 0;
+  border-radius: 5px;
+  
+}
+.project{
+  flex-direction: column;
+  height: fit-content;
+  padding: 10px;
+}
+.project-image{
+  width: 95%;
+  height: 400px;
+  margin-bottom: 10px;
+}
+
+.project-description{
+  width: 95%;
+  margin: 10px ;
+}
+.project-description h3{
+  font-size: 2rem;
+  font-weight: 800;
+  color: #ff7f55;
+  margin: 0;
+}
+.project-description p{
+  font-size: 1.2rem;
+  
+}
+button{
+  width: 100%;
+  height: 100px;
+  font-size: 1.5rem;
+  
+}
+button a {
+  font-weight: 700;
+  
+
+}
+
+
+
+
+
+
+
+
+
+
+}
